[gd_scene load_steps=49 format=2]

[ext_resource path="res://Assets/VERDANAB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Audio/Sounds/cursor_move.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Sounds/confirm.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/MainMenu/hand_cursor.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Battle/BattleSelectCursor.gd" type="Script" id=5]
[ext_resource path="res://Audio/Musics/Combat_background.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scripts/Battle/Code.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Battle/Flee.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Battle/UseObject.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Character/SetStartAnimation.gd" type="Script" id=10]
[ext_resource path="res://Assets/Characters/Female/walk_left_girl_dx.png.png" type="Texture" id=11]
[ext_resource path="res://Assets/Characters/Male/walk_left_boy_sx.png.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/Male/stand_up_boy.png.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/Male/walk_up_boy_dx.png.png" type="Texture" id=14]
[ext_resource path="res://Assets/Characters/Male/walk_left_boy_dx.png.png" type="Texture" id=15]
[ext_resource path="res://Assets/Characters/Female/walk_down_girl_dx.png.png" type="Texture" id=16]
[ext_resource path="res://Assets/Characters/Female/walk_up_girl_sx.png.png" type="Texture" id=17]
[ext_resource path="res://Assets/Characters/Female/walk_left_girl_sx.png.png" type="Texture" id=18]
[ext_resource path="res://Assets/Characters/Female/stand_down_girl.png.png" type="Texture" id=19]
[ext_resource path="res://Assets/Characters/Female/stand_up_girl.png.png" type="Texture" id=20]
[ext_resource path="res://Assets/Characters/Male/stand_down_boy.png.png" type="Texture" id=21]
[ext_resource path="res://Assets/Characters/Male/walk_up_boy_sx.png.png" type="Texture" id=22]
[ext_resource path="res://Assets/Characters/Female/walk_up_girl_dx.png.png" type="Texture" id=23]
[ext_resource path="res://Assets/Characters/Male/stand_left_boy.png.png" type="Texture" id=24]
[ext_resource path="res://Assets/Characters/Male/walk_down_boy_sx.png.png" type="Texture" id=25]
[ext_resource path="res://Assets/Characters/Male/walk_down_boy_dx.png.png" type="Texture" id=26]
[ext_resource path="res://Assets/Characters/Female/stand_left_girl.png.png" type="Texture" id=27]
[ext_resource path="res://Assets/Characters/Female/walk_down_girl_sx.png.png" type="Texture" id=28]
[ext_resource path="res://Assets/Battle/cave_background.png" type="Texture" id=29]
[ext_resource path="res://Assets/Battle/wood_background.jpg" type="Texture" id=30]
[ext_resource path="res://Scripts/Battle/Set_Battle_Background.gd" type="Script" id=31]
[ext_resource path="res://Assets/potion.png" type="Texture" id=32]
[ext_resource path="res://Scripts/Battle/Battle.gd" type="Script" id=33]
[ext_resource path="res://Scripts/Battle/setHP.gd" type="Script" id=34]
[ext_resource path="res://Scripts/Battle/setAtk.gd" type="Script" id=35]
[ext_resource path="res://Scripts/Battle/OptionCursor.gd" type="Script" id=36]
[ext_resource path="res://Scripts/Battle/Inventory.gd" type="Script" id=37]
[ext_resource path="res://Scripts/Battle/ShowFunctionsButton.gd" type="Script" id=38]
[ext_resource path="res://Scripts/Battle/FunctionsList.gd" type="Script" id=39]
[ext_resource path="res://Scripts/Battle/SelectFunctionCursor.gd" type="Script" id=40]
[ext_resource path="res://Scripts/Battle/WinLosePopup.gd" type="Script" id=41]
[ext_resource path="res://Audio/Sounds/WrongAnswer.wav" type="AudioStream" id=42]
[ext_resource path="res://Audio/Sounds/CorrectAnswer.wav" type="AudioStream" id=43]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 20 ) ],
"loop": true,
"name": "female_walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "female_stand_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "male_stand_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 27 ) ],
"loop": true,
"name": "female_walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "female_stand_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 21 ) ],
"loop": true,
"name": "male_walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "male_walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 24 ), ExtResource( 15 ), ExtResource( 24 ) ],
"loop": true,
"name": "male_walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "male_stand_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "male_stand_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "female_stand_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 19 ) ],
"loop": true,
"name": "female_walk_down",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Battle" type="Node2D"]
script = ExtResource( 33 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -32.311
autoplay = true

[node name="CommandList" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.2941
margin_top = 448.211
margin_right = 280.294
margin_bottom = 619.211
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerM" type="VBoxContainer" parent="CommandList"]
margin_right = 223.0
margin_bottom = 171.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuEntries" type="VBoxContainer" parent="CommandList/VBoxContainerM"]
margin_right = 223.0
margin_bottom = 171.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Label" parent="CommandList/VBoxContainerM/MenuEntries"]
margin_top = 35.0
margin_right = 223.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "Programma"
uppercase = true
script = ExtResource( 7 )

[node name="UseObject" type="Label" parent="CommandList/VBoxContainerM/MenuEntries"]
margin_top = 70.0
margin_right = 223.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "usa oggetto"
uppercase = true
script = ExtResource( 9 )

[node name="Flee" type="Label" parent="CommandList/VBoxContainerM/MenuEntries"]
margin_top = 105.0
margin_right = 223.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
text = "fuggi"
uppercase = true
script = ExtResource( 8 )

[node name="SelectCursor" type="Sprite" parent="CommandList/VBoxContainerM/MenuEntries"]
position = Vector2( -29.0089, 104.352 )
scale = Vector2( 1.13396, 1 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="menu_cursor_sound" type="AudioStreamPlayer" parent="CommandList/VBoxContainerM/MenuEntries/SelectCursor"]
stream = ExtResource( 2 )
volume_db = -18.893

[node name="option_confirm_sound" type="AudioStreamPlayer" parent="CommandList/VBoxContainerM/MenuEntries/SelectCursor"]
stream = ExtResource( 3 )
volume_db = -8.961

[node name="Options" type="PanelContainer" parent="." groups=[
"BattleSubMenu",
]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 799.622
margin_top = 260.568
margin_right = 1002.62
margin_bottom = 424.568
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerM" type="VBoxContainer" parent="Options"]
margin_left = 7.0
margin_top = 7.0
margin_right = 195.998
margin_bottom = 157.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuEntries" type="VBoxContainer" parent="Options/VBoxContainerM"]
margin_right = 188.0
margin_bottom = 150.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionCursor" type="Sprite" parent="Options/VBoxContainerM/MenuEntries"]
visible = false
position = Vector2( -29.0089, 104.352 )
scale = Vector2( 1.13396, 1 )
texture = ExtResource( 4 )
script = ExtResource( 36 )

[node name="menu_cursor_sound" type="AudioStreamPlayer" parent="Options/VBoxContainerM/MenuEntries/OptionCursor"]
stream = ExtResource( 2 )
volume_db = -18.893

[node name="option_confirm_sound" type="AudioStreamPlayer" parent="Options/VBoxContainerM/MenuEntries/OptionCursor"]
stream = ExtResource( 3 )
volume_db = -8.961

[node name="CodeHistory" type="PanelContainer" parent="." groups=[
"BattleSubMenu",
]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.9198
margin_top = 75.7759
margin_right = 280.92
margin_bottom = 368.776
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerM" type="VBoxContainer" parent="CodeHistory"]
margin_left = 7.0
margin_top = 7.0
margin_right = 222.0
margin_bottom = 286.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuEntries" type="VBoxContainer" parent="CodeHistory/VBoxContainerM"]
margin_right = 215.0
margin_bottom = 279.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectFunctions" type="ColorRect" parent="." groups=[
"BattleSubMenu",
]]
visible = false
margin_left = 799.0
margin_top = 431.0
margin_right = 1004.0
margin_bottom = 584.0
color = Color( 0.203922, 0.203922, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Functions" type="ScrollContainer" parent="ColorRectFunctions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = -1.0
script = ExtResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRectFunctions/Functions"]
margin_right = 202.0
margin_bottom = 300.0
rect_min_size = Vector2( 202, 300 )

[node name="SelectCursor" type="Sprite" parent="ColorRectFunctions/Functions/Control"]
visible = false
position = Vector2( 26.9692, 21.6078 )
scale = Vector2( 1.13396, 1 )
texture = ExtResource( 4 )
script = ExtResource( 40 )

[node name="menu_cursor_sound" type="AudioStreamPlayer" parent="ColorRectFunctions/Functions/Control/SelectCursor"]
stream = ExtResource( 2 )
volume_db = -30.0

[node name="option_confirm_sound" type="AudioStreamPlayer" parent="ColorRectFunctions/Functions/Control/SelectCursor"]
stream = ExtResource( 3 )
volume_db = -13.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 355.218, 416.721 )
scale = Vector2( 8, 8 )
frames = SubResource( 2 )
animation = "male_stand_up"
script = ExtResource( 10 )

[node name="Cave_Background" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 570.613, 301.139 )
scale = Vector2( 0.526521, 0.492504 )
texture = ExtResource( 29 )
script = ExtResource( 31 )

[node name="Wood_Backgroun" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 511.62, 349.888 )
scale = Vector2( 0.399923, 0.331291 )
texture = ExtResource( 30 )

[node name="Inventory" type="ItemList" parent="." groups=[
"BattleSubMenu",
]]
visible = false
margin_left = 683.0
margin_top = 322.0
margin_right = 956.0
margin_bottom = 591.0
items = [ "Potion", ExtResource( 32 ), false ]
max_text_lines = 3
auto_height = true
max_columns = 3
same_column_width = true
fixed_column_width = 3
fixed_icon_size = Vector2( 90, 90 )
script = ExtResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="Label" parent="."]
margin_left = 413.109
margin_top = 412.2
margin_right = 444.109
margin_bottom = 433.2
custom_fonts/font = SubResource( 3 )
text = "PV:"
uppercase = true
script = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="Label" parent="."]
margin_left = 410.542
margin_top = 441.46
margin_right = 451.542
margin_bottom = 462.46
custom_fonts/font = SubResource( 3 )
text = "ATT:"
uppercase = true
script = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpEnemy" type="Label" parent="."]
margin_left = 643.414
margin_top = 270.619
margin_right = 674.414
margin_bottom = 291.619
custom_fonts/font = SubResource( 3 )
text = "PV:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtkEnemy" type="Label" parent="."]
margin_left = 643.414
margin_top = 297.991
margin_right = 684.414
margin_bottom = 318.991
custom_fonts/font = SubResource( 3 )
text = "ATT:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandsTitle" type="Label" parent="." groups=[
"BattleSubMenu",
]]
visible = false
margin_left = 121.414
margin_top = 86.991
margin_right = 216.414
margin_bottom = 107.991
custom_fonts/font = SubResource( 3 )
text = "comandi:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="." groups=[
"BattleSubMenu",
]]
visible = false
margin_left = 626.0
margin_top = 526.628
margin_right = 732.0
margin_bottom = 573.628
custom_fonts/font = SubResource( 4 )
text = "ATTACCA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FleeDialog" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 421.486
margin_top = 298.271
margin_right = 601.486
margin_bottom = 385.271
popup_exclusive = true
window_title = "Fuga"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFunctionsButton" type="Button" parent="." groups=[
"BattleSubMenu",
]]
visible = false
margin_left = 626.0
margin_top = 457.0
margin_right = 719.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 5 )
text = "FUNZIONI"
script = ExtResource( 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLosePopup" type="AcceptDialog" parent="."]
pause_mode = 2
margin_left = 422.0
margin_top = 312.0
margin_right = 612.0
margin_bottom = 437.0
popup_exclusive = true
window_title = "Battaglia"
script = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongAnswerSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 42 )
volume_db = -7.068

[node name="CorrectAnswerSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 43 )
volume_db = -10.097
[connection signal="item_activated" from="Inventory" to="Inventory" method="_on_Inventory_item_activated"]
[connection signal="visibility_changed" from="Inventory" to="Inventory" method="_on_Inventory_visibility_changed"]
[connection signal="button_up" from="Attack" to="." method="_on_Attack_button_up"]
[connection signal="confirmed" from="FleeDialog" to="CommandList/VBoxContainerM/MenuEntries/Flee" method="_on_FleeDialog_confirmed"]
[connection signal="pressed" from="ShowFunctionsButton" to="ShowFunctionsButton" method="_on_ShowFunctionsButton_pressed"]
[connection signal="about_to_show" from="WinLosePopup" to="WinLosePopup" method="_on_WinLosePopup_about_to_show"]
[connection signal="confirmed" from="WinLosePopup" to="." method="_on_WinLosePopup_confirmed"]
